fixed alignment issue

--- a/extension/ui/pages/pendings.css
+++ b/extension/ui/pages/pendings.css
@@ -223,7 +223,7 @@ html.side-panel,
 
 
 @media (max-width:300px) {
-    .side-panel button {
+    .side-panel :not(.result-cancel) > button {
         display: flex;
     }
 
